spacing fix

--- a/resume2020/css/style.css
+++ b/resume2020/css/style.css
@@ -295,7 +295,7 @@ button:focus,
 
 .header .content {
   position: absolute;
-  bottom: 50px;
+  bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
